--- a/_sass/_05-bilan-financier.scss
+++ b/_sass/_05-bilan-financier.scss
@@ -21,7 +21,7 @@
     @extend .col-md-7;
 
     > li {
-      @extend .row;
+      clear: both;
     }
 
     h4,
